Pixel-Sketch/styles.css
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #ededed;
  font-family: "Edu QLD Beginner", cursive;
  font-family: "Montserrat", sans-serif;
}

h1 {
  margin-top: 0.5em;
  margin-bottom: 0;
}

button {
  cursor: pointer;
  font-family: "Edu QLD Beginner", cursive;
  font-family: "Montserrat", sans-serif;
}

input.slider-input {
  cursor: pointer;
}

.button {
  margin: auto;
}

#pixel-count {
  text-align: center;
}

.slider {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
}

#pixel-sketch {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 1.5em;
  background-color: #ff8a60;
}

#grid-container {
  display: grid;
  border-style: solid;
}

.grid-cell {
  background-color: #9efff5;
}

#control-panel {
  display: flex;
  margin-top: 1.5em;
  border-style: solid;
  border-width: 0.2em;
  border-color: black;
}

@media only screen and (max-width: 767px) {
  #grid-container {
    width: 350px;
    height: 350px;
  }

  #control-panel {
    width: 250px;
  }
}

@media only screen and (min-width: 768px) {
  #grid-container {
    width: 450px;
    height: 450px;
  }

  #control-panel {
    width: 300px;
  }
}

@media only screen and (min-width: 1024px) {
  #grid-container {
    width: 550px;
    height: 550px;
  }

  #control-panel {
    width: 500px;
  }
}

